.k8s/networking/egress/egress-gateway-to-services.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-gateway-to-services
  namespace: dev-web
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: platform-gateway
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-service
    ports:
    - protocol: TCP
      port: 3001
    - protocol: TCP
      port: 3004
    - protocol: TCP
      port: 3005
