.k8s/networking/egress/egress-services-to-external-smtp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-services-to-external-smtp
  namespace: dev-service
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 465
    - protocol: TCP
      port: 587
