.k8s/networking/egress/egress-services-to-infra.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-services-to-infra
  namespace: dev-service
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev-infra
    ports:
    - protocol: TCP
      port: 5432 # postgres
    - protocol: TCP
      port: 6379 # redis
    - protocol: TCP
      port: 5672 # rabbitmq
